# cpp-course-manager

./: CMakeLists.txt  README.md
include/cm/: chapter.hpp  course_manager.hpp  lesson.hpp
install/cmake/: cmTargets-debug.cmake  cmTargets-release.cmake  cmTargets.cmake
install/include/cm/: course_manager.hpp
src/: chapter.cpp  course_manager.cpp
tests/: CMakeLists.txt  create_course_manager.cpp
